--- a/styles.css
+++ b/styles.css
@@ -82,8 +82,8 @@ main {
     box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
     border: 1px solid black;
     margin: 1rem;
-    border-radius: 2rem;
-    height: 24rem;
+    border-radius: 0.5rem;
+    height: 20rem;
     width: 20rem;
 }
 
@@ -121,7 +121,7 @@ main {
 /*Borders*/
 .blueborder {
     /* border-top: 3px solid #004C8E; */
-    border-bottom: 3px solid #004C8E;
+    border-bottom: 1px solid #004C8E;
 }
 
 .grayborder {
@@ -294,6 +294,7 @@ input:focus {
     box-shadow: 0px 3px 4px 0px rgba(0,0,0,0.75);
     font-size: 1.2rem;
     font-weight: 500;
+    margin-top: 2rem;
 }
 
 .button:hover {
