--- a/styles.css
+++ b/styles.css
@@ -36,8 +36,9 @@ ul {
 
 /* nav menu bar */
 nav {
-    border-bottom: solid 2px #004C8E;
-    justify-content: space-evenly;
+    /* border-bottom: solid 2px #004C8E; */
+    justify-content: space-between;
+    margin: 0 1rem 0 2rem;
 }
 
 .logo {
@@ -48,7 +49,7 @@ nav {
 .a-top {
     font-family: 'orbitron', sans-serif;
     color: rgb(0, 0, 0);
-    font-size: 0.8rem;
+    font-size: 1rem;
     text-decoration: none;
     margin: 1.5rem;
     transition: opacity ease-in 2s;
@@ -61,7 +62,7 @@ nav {
 
 .bottom-bar {
     /* height: 2rem; */
-    border-top: solid 2px #091F2C;
+    border-top: solid 3px #091F2C;
 }
 
 /* Main section */
@@ -323,7 +324,7 @@ form {
 }
 
 .contact-form {
-    margin-top: 3rem;
+    margin-top: 7rem;
 }
 
 /*footer menu and box styling*/
@@ -441,13 +442,13 @@ form {
         display: none;
     }
     
-    .a-top {
+    /* .a-top {
         font-size: 0.6em;
-    }
+    } */
     
-    .bottom-bar{
+    /* .bottom-bar{
         display: none;
-    }  
+    }   */
     
     /*contact form*/ 
     .font {
@@ -491,9 +492,9 @@ form {
 @media (min-width: 991.98px) { 
     
     /*nav bar*/
-    .a-top {
+    /* .a-top {
         font-size: 1em;
-    }
+    } */
     
     .logo {
         height: 2rem;
@@ -516,7 +517,7 @@ form {
     
     
     .a-top {
-        font-size: 1.3em;
+        font-size: 1.3rem;
     }
     
     .logo {
