--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,6 @@ ul {
 
 /* nav menu bar */
 nav {
-    /* border-bottom: solid 2px #004C8E; */
     justify-content: space-between;
     margin: 0 1rem 0 2rem;
 }
@@ -61,17 +60,14 @@ nav {
 }
 
 .bottom-bar {
-    /* height: 2rem; */
     border-top: solid 3px #091F2C;
 }
 
 /* Main section */
-
 main {
     background: rgb(255, 255, 255);
 }
 
-/*Auto parts*/
 .auto-parts {
     height: 100%;
     width: 100%;
@@ -79,7 +75,6 @@ main {
 }
 
 .auto-box {
-    /* background-image: linear-gradient(20deg, rgb(212, 212, 212), white); */
     box-shadow: 0 6px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.2);
     border: 1px solid black;
     margin: 1rem;
@@ -99,7 +94,7 @@ main {
     text-align: center;
 }
 
-/*Info boxes*/
+/*Info*/
 .info-section {
     height: 100%;
     width: 100%;
@@ -121,7 +116,6 @@ main {
 
 /*Borders*/
 .blueborder {
-    /* border-top: 3px solid #004C8E; */
     border-bottom: 1px solid #004C8E;
 }
 
@@ -131,7 +125,6 @@ main {
 
 
 /* REUSABLE CODE */
-
 .flex {
     display: flex;
 }
@@ -283,7 +276,7 @@ input:focus {
     border-bottom: solid 3px #004C8E;
 }
 
-/*red submit button and textarea styling*/
+/*submit button and textarea styling*/
 .button {
     display: flex;
     justify-content: center;
@@ -313,7 +306,7 @@ textarea {
 }
 
 
-/*contact form animations*/
+/*contact form*/
 .text-area {
     animation: 2s textarea ;
 }
@@ -333,7 +326,6 @@ form {
 }
 
 .bottom-menu {
-    /* margin-top: 5rem; */
     padding: 2rem 0rem 2rem 2.5rem;
     background-color: black;
     align-items: flex-start
@@ -442,14 +434,6 @@ form {
         display: none;
     }
     
-    /* .a-top {
-        font-size: 0.6em;
-    } */
-    
-    /* .bottom-bar{
-        display: none;
-    }   */
-    
     /*contact form*/ 
     .font {
         font-family: 'Roboto', sans-serif;
@@ -490,11 +474,6 @@ form {
 
 /*Breakpoint 992px*/
 @media (min-width: 991.98px) { 
-    
-    /*nav bar*/
-    /* .a-top {
-        font-size: 1em;
-    } */
     
     .logo {
         height: 2rem;
